--- a/assets/base.css
+++ b/assets/base.css
@@ -2873,3 +2873,7 @@ details-disclosure > details {
 .font-body-bold {
   font-weight: var(--font-body-weight-bold);
 }
+
+.__hide-this-element {
+  display: none !important;
+}
